chore/fix: make tooltip visible when inside a parent div with overflow hidden

--- a/public/storybook.css
+++ b/public/storybook.css
@@ -15,8 +15,6 @@ html {
 }
 
 .liq_tooltips {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: 300px;
+ /* temporary )
+  margin-top: 300px;  */
 }
